# face_tensorrt_cmake

./: CMakeLists.txt  README.md
face_tensorrt/: README.MD
face_tensorrt/include/: printInfo.h
face_tensorrt/src/: CMakeLists.txt  blacklistDetection.cpp  face_tensorrt.cpp.bak
include/: blackListDetection.h  checkBlacklist.h  faceDetector.h  ocrCommon.h
src/: checkBlackList.cpp  face_tensorrt.cpp
tensorrt/: README.md
